// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Query and expressions reducer should add a new expression 1`] = `
Object {
  "queries": Array [
    Object {
      "datasourceUid": "abc123",
      "model": Object {
        "refId": "A",
      },
      "queryType": "query",
      "refId": "A",
    },
    Object {
      "datasourceUid": "-100",
      "model": Object {
        "conditions": Array [
          Object {
            "evaluator": Object {
              "params": Array [
                0,
                0,
              ],
              "type": "gt",
            },
            "operator": Object {
              "type": "and",
            },
            "query": Object {
              "params": Array [],
            },
            "reducer": Object {
              "params": Array [],
              "type": "avg",
            },
            "type": "query",
          },
        ],
        "datasource": Object {
          "name": "Expression",
          "type": "__expr__",
          "uid": "__expr__",
        },
        "expression": "",
        "hide": false,
        "refId": "B",
        "type": "math",
      },
      "queryType": "",
      "refId": "B",
      "relativeTimeRange": undefined,
    },
  ],
}
`;

exports[`Query and expressions reducer should add query 1`] = `
Object {
  "queries": Array [
    Object {
      "datasourceUid": "abc123",
      "model": Object {
        "refId": "A",
      },
      "queryType": "query",
      "refId": "A",
    },
    Object {
      "datasourceUid": "c8eceabb-0275-4108-8f03-8f74faf4bf6d",
      "model": Object {
        "datasource": Object {
          "type": "prometheus",
          "uid": "c8eceabb-0275-4108-8f03-8f74faf4bf6d",
        },
        "hide": false,
        "refId": "B",
      },
      "queryType": "",
      "refId": "B",
      "relativeTimeRange": Object {
        "from": 600,
        "to": 0,
      },
    },
  ],
}
`;

exports[`Query and expressions reducer should duplicate query 1`] = `
Object {
  "queries": Array [
    Object {
      "datasourceUid": "abc123",
      "model": Object {
        "refId": "A",
      },
      "queryType": "query",
      "refId": "A",
    },
    Object {
      "datasourceUid": "abc123",
      "model": Object {
        "hide": false,
        "refId": "B",
      },
      "queryType": "",
      "refId": "B",
      "relativeTimeRange": Object {
        "from": 600,
        "to": 0,
      },
    },
  ],
}
`;

exports[`Query and expressions reducer should remove an expression or alert query 1`] = `
Object {
  "queries": Array [
    Object {
      "datasourceUid": "abc123",
      "model": Object {
        "refId": "A",
      },
      "queryType": "query",
      "refId": "A",
    },
  ],
}
`;

exports[`Query and expressions reducer should rewire expressions 1`] = `
Object {
  "queries": Array [
    Object {
      "datasourceUid": "abc123",
      "model": Object {
        "refId": "A",
      },
      "queryType": "query",
      "refId": "A",
    },
    Object {
      "datasourceUid": "-100",
      "model": Object {
        "conditions": Array [
          Object {
            "evaluator": Object {
              "params": Array [
                0,
                0,
              ],
              "type": "gt",
            },
            "operator": Object {
              "type": "and",
            },
            "query": Object {
              "params": Array [
                "C",
              ],
            },
            "reducer": Object {
              "params": Array [],
              "type": "avg",
            },
            "type": "query",
          },
        ],
        "datasource": Object {
          "name": "Expression",
          "type": "__expr__",
          "uid": "__expr__",
        },
        "expression": "",
        "refId": "B",
        "type": "classic_conditions",
      },
      "queryType": "",
      "refId": "B",
    },
  ],
}
`;

exports[`Query and expressions reducer should set data queries 1`] = `
Object {
  "queries": Array [
    Object {
      "datasourceUid": "-100",
      "model": Object {
        "conditions": Array [
          Object {
            "evaluator": Object {
              "params": Array [
                0,
                0,
              ],
              "type": "gt",
            },
            "operator": Object {
              "type": "and",
            },
            "query": Object {
              "params": Array [
                "A",
              ],
            },
            "reducer": Object {
              "params": Array [],
              "type": "avg",
            },
            "type": "query",
          },
        ],
        "datasource": Object {
          "name": "Expression",
          "type": "__expr__",
          "uid": "__expr__",
        },
        "expression": "",
        "refId": "B",
        "type": "classic_conditions",
      },
      "queryType": "",
      "refId": "B",
    },
  ],
}
`;

exports[`Query and expressions reducer should update an expression 1`] = `
Object {
  "queries": Array [
    Object {
      "datasourceUid": "-100",
      "model": Object {
        "conditions": Array [
          Object {
            "evaluator": Object {
              "params": Array [
                0,
                0,
              ],
              "type": "gt",
            },
            "operator": Object {
              "type": "and",
            },
            "query": Object {
              "params": Array [
                "A",
              ],
            },
            "reducer": Object {
              "params": Array [],
              "type": "avg",
            },
            "type": "query",
          },
        ],
        "datasource": Object {
          "name": "Expression",
          "type": "__expr__",
          "uid": "__expr__",
        },
        "expression": "",
        "refId": "B",
        "type": "math",
      },
      "queryType": "",
      "refId": "B",
    },
  ],
}
`;

exports[`Query and expressions reducer should update an expression refId and rewire expressions 1`] = `
Object {
  "queries": Array [
    Object {
      "datasourceUid": "abc123",
      "model": Object {
        "refId": "C",
      },
      "queryType": "query",
      "refId": "C",
    },
    Object {
      "datasourceUid": "-100",
      "model": Object {
        "conditions": Array [
          Object {
            "evaluator": Object {
              "params": Array [
                0,
                0,
              ],
              "type": "gt",
            },
            "operator": Object {
              "type": "and",
            },
            "query": Object {
              "params": Array [
                "C",
              ],
            },
            "reducer": Object {
              "params": Array [],
              "type": "avg",
            },
            "type": "query",
          },
        ],
        "datasource": Object {
          "name": "Expression",
          "type": "__expr__",
          "uid": "__expr__",
        },
        "expression": "",
        "refId": "B",
        "type": "classic_conditions",
      },
      "queryType": "",
      "refId": "B",
    },
  ],
}
`;

exports[`Query and expressions reducer should update expression type 1`] = `
Object {
  "queries": Array [
    Object {
      "datasourceUid": "abc123",
      "model": Object {
        "refId": "A",
      },
      "queryType": "query",
      "refId": "A",
    },
    Object {
      "datasourceUid": "-100",
      "model": Object {
        "conditions": Array [
          Object {
            "evaluator": Object {
              "params": Array [
                0,
                0,
              ],
              "type": "gt",
            },
            "operator": Object {
              "type": "and",
            },
            "query": Object {
              "params": Array [],
            },
            "reducer": Object {
              "params": Array [],
              "type": "avg",
            },
            "type": "query",
          },
        ],
        "datasource": Object {
          "name": "Expression",
          "type": "__expr__",
          "uid": "__expr__",
        },
        "expression": "",
        "refId": "B",
        "type": "reduce",
      },
      "queryType": "",
      "refId": "B",
    },
  ],
}
`;
